--- a/client/src/Navbar/Navbar.css
+++ b/client/src/Navbar/Navbar.css
@@ -1,19 +1,26 @@
-/* Navbar.css */
 .navbar {
-    background-color: #333;
-    overflow: hidden;
+    background-color: var(--background-color);
+    padding: 10px;
 }
 
-.nav-link {
-    float: left;
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
+.navbar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: space-around;
+}
+
+.navbar li {
+    display: inline;
+}
+
+.navbar a {
     text-decoration: none;
+    color: var(--text-color);
+    font-weight: bold;
 }
 
-.nav-link:hover {
-    background-color: #ddd;
-    color: black;
+.navbar a:hover {
+    text-decoration: underline;
 }
